<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/import_file_data" android:title="@string/import_file_item"/>
    <item android:id="@+id/import_calendar_data" android:title="@string/import_calendar_item"/>
    <item android:id="@+id/export_file_data" android:title="@string/export_file_item"/>
    <item android:id="@+id/export_calendar_data" android:title="@string/export_calendar_item"/>
    <item android:id="@+id/stats" android:title="@string/stats" />
    <item android:id="@+id/set_bedtime" android:title="@string/bedtime_item" />
    <item android:id="@+id/graphs" android:title="@string/graphs" />
    <item android:id="@+id/settings" android:title="@string/settings" />
    <item android:id="@+id/delete_all_sleep" android:title="@string/delete_all_sleep" />
    <item android:id="@+id/documentation" android:title="@string/documentation"/>
    <item android:id="@+id/about" android:title="@string/about_item"/>
</menu>
