<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_category_theme">
        <SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="follow_system_theme"
            android:title="@string/settings_follow_system_theme" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="follow_system_theme"
            android:key="dark_mode"
            android:title="@string/settings_enable_dark_theme" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="backup_destinations_category"
        android:title="@string/settings_category_backup">
        <!-- Master switch: when off, on-change and daily backups stop running for all configured
             destinations and the destination rows below are disabled. Toggling it on with no
             destinations configured starts the add-destination flow; it turns itself back off
             when the last destination is removed (see Preferences.setupBackupPreferences). -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="automatic_backup"
            android:order="-1"
            android:summaryOff="@string/settings_automatic_backup_off"
            android:title="@string/settings_automatic_backup" />
        <!-- Configured destination rows are added here programmatically in Preferences.kt with
             order 0..n, so the static items get high explicit orders to always sort after them. -->
        <Preference
            android:dependency="automatic_backup"
            android:key="add_backup_destination"
            android:order="100"
            android:title="@string/settings_add_backup_destination" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pretty_backup"
            android:order="101"
            android:title="@string/settings_pretty_backup" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_dashboard">
        <ListPreference
            android:key="dashboard_duration"
            android:title="@string/settings_dashboard_duration"
            android:entries="@array/duration_entries"
            android:entryValues="@array/duration_entry_values"
            android:defaultValue="-7"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:key="ideal_sleep_length"
            android:title="@string/settings_ideal_sleep_length"
            android:entries="@array/ideal_sleep_entries"
            android:entryValues="@array/ideal_sleep_entry_values"
            android:defaultValue="8.0"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:key="sleep_start_delta"
            android:title="@string/settings_sleep_start_delta"
            android:entries="@array/sleep_start_delay_entries"
            android:entryValues="@array/sleep_start_delay_entry_values"
            android:defaultValue="0.0"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="compact_view"
            android:title="@string/settings_compact_view" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="show_average_sleep_durations"
            android:title="@string/show_average_of_sleep_duration" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_average_daily_sums"
            android:title="@string/show_averege_of_daily_sums" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="ignore_empty_days"
            android:title="@string/ignore_empty_days" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="use_median"
            android:title="@string/use_median" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/past_sleeps">
        <SwitchPreference
            android:defaultValue="false"
            android:key="show_awake_for"
            android:title="@string/show_awake_duration" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="show_rating"
            android:title="@string/show_rating" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_reminders">
        <SwitchPreference
            android:defaultValue="false"
            android:key="daily_reminder"
            android:title="@string/settings_daily_reminder" />
        <Preference
            android:key="wakeup"
            android:title="@string/settings_wakeup" />
        <Preference
            android:key="bedtime"
            android:title="@string/settings_bedtime" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_etc">
        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_dnd"
            android:title="@string/settings_enable_dnd" />
    </PreferenceCategory>
</PreferenceScreen>

