<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="3">
        <TextView
            android:id="@+id/sleep_item_start_label"
            android:text="@string/started_on"
            android:layout_gravity="top|start"/>
        <TextView
            android:id="@+id/sleep_item_start"
            android:layout_gravity="top|end"/>
        <TextView
            android:id="@+id/sleep_item_stop_label"
            android:text="@string/stopped_on"
            android:layout_gravity="top|start"/>
        <TextView
            android:id="@+id/sleep_item_stop"
            android:layout_gravity="top|end"/>
        <TextView
            android:id="@+id/sleep_item_duration_label"
            android:text="@string/slept_for_label"
            android:layout_gravity="top|start"/>
        <TextView
            android:id="@+id/sleep_item_duration"
            android:layout_gravity="top|end"/>
    </GridLayout>
</androidx.cardview.widget.CardView>