<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/status_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/status"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/status_header"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/press_start"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/status_header" />


                <TextView
                    android:id="@+id/dashboard_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/status"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/dashboard"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/status" />


                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/dashboard_body"
                    android:name="hu.vmiklos.plees_tracker.StatsFragment"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_below="@id/dashboard_header"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dashboard_header"/>


                <TextView
                    android:id="@+id/past_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dashboard_body"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/past"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dashboard_body" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sleeps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/layout_sleep_item" />
        <TextView
            android:id="@+id/no_sleeps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/no_sleeps"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:gravity="bottom|end">

        <LinearLayout
            android:id="@+id/manual_entry_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fab_btn_corner"
            android:gravity="center_vertical"
            android:backgroundTint="@color/colorFabPrimary"
            android:layout_marginEnd="16dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/manual_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/manual_entry"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:backgroundTint="@color/colorFabPrimary" />

            <TextView
                android:id="@+id/manual_entry_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="@string/manual_entry"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/colorFabText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_stop_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@drawable/fab_btn_corner"
            android:gravity="center_vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/start_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/start"
                android:src="@drawable/ic_start"
                app:borderWidth="0dp"
                app:elevation="0dp" />

            <TextView
                android:id="@+id/start_stop_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/colorFabText" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
